# BattleShip

./: CMakeLists.txt  README.md  main.cpp
classes/Cell/: Cell.h
classes/Ship/: Ship.cpp  Ship.h
classes/board/: board.cpp  boards.h
src/: Art.cpp  Art.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Color.cpp  Color.h  Fleet.cpp  Fleet.h  Game.cpp  Game.h  Player.cpp  Player.h  Ship.cpp  Ship.h  UX.cpp  UX.h  main.cpp
src/Cell/: Cell.cpp
src/Ship/: Ship.cpp  Ship.h
src/UI/: Art.cpp  Art.h
src/UX/: UX.cpp
src/board/: board.cpp  boards.h
